--- a/.github/workflows/24-hour.yml
+++ b/.github/workflows/24-hour.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     types: [opened, synchronize]
 
+# 권한 설정 추가
+permissions: 
+  pull-requests: read
+  contents: read
+  
 jobs:
   check-merge-time:
     runs-on: ubuntu-latest
